08-app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: static-site
  annotations:
    openshift.io/node-selector: ""
  labels:
    name: static-site
