11-app-deployconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: static-site
spec:
  replicas: 1
  selector:
    deploymentconfig: frontend
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
        deploymentconfig: frontend
    spec:
      containers:
        - image: 'million12/nginx'
          imagePullPolicy: Always
          name: frontend
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 100m
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - image: 'nginx/nginx-prometheus-exporter:0.4.2'
          args:
          - -nginx.scrape-uri=http://localhost:80/nginx_status
          imagePullPolicy: Always
          name: metrics
          ports:
            - containerPort: 9113
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        runAsUser: 0
      serviceAccountName: nginx
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - type: ConfigChange
