11-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: frontend
  name: frontend
  namespace: static-site
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: frontend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
