12-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: frontend
  name: frontend
  namespace: static-site
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  - name: metrics
    port: 9113
    protocol: TCP
    targetPort: 9113
  selector:
    deploymentconfig: frontend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
